src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
@use "@sass/mixins/_utils.mixins.scss" as mut;
@use "@sass/variables/_variables.colors.scss" as c;
@use "@sass/variables/_variables.fonts.scss" as ft;
@use "@sass/_utils.functions.scss" as f;
@use "@sass/_utils.functions.scss" as *;
@use "@sass/mixins/_vendor.mixins.scss" as vnd;


.newsSliderItem {
    display: flex;
    flex-direction: column;

    .newsMainPage {
        @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
        @include mut.sized(840px, 567px);
        @include mut.full-rounded(30px);
        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
        background-color: c.$pure-white-color;
        margin-left: 20px;

        @media (min-width: 768px) and (max-width: 1024px) {
            width: 96vw;
            height: f.pxToRem(462px);
            margin-right: 20px;
            margin-left: 20px;
            overflow: hidden;
        }

        @media (min-width: 360px) and (max-width: 767px) {
            width: f.pxToRem(340px);
            height: fit-content;
            margin: f.pxToRem(-5px) f.pxToRem(20px) 0 f.pxToRem(20px);
        }
    }

    .newsSlideText {
        position: absolute;
        height: fit-content;
        top: 374px;
        z-index: 2;
        @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
        background-color: c.$pure-white-color;


        @media (min-width: 768px) and (max-width: 1024px){
            top: 320px;
        }

        @media (min-width: 360px) and (max-width: 767px) {
            position: relative;
            top: 1px;
        }
    }

    .newsPageImgContainer {
        position: relative;
        z-index: 1;
        @include mut.rem-padded($top: 5px, $right: 5px, $bottom: 5px, $left: 5px);

        @media (min-width: 768px) and (max-width: 1024px) {
            margin-top: 0;
            height: 100%;
        }

        @media screen and (max-width: 767px) {
            height: f.pxToRem(229px);
        }

        .newsPageImg {
            position: relative;
            width: 100%;
            height: auto;
            @include mut.full-rounded(30px);

            object-fit: cover;
            @media (max-width: 1024px){
                margin-top: 0;
                height: 100%;
            }
        }
    }

    .newsContainer {
        box-sizing: border-box;
        width: 100%;
        word-break: break-all;
        height: 193px;
        @include mut.flexed(column, start, space-between, nowrap);
        @include mut.rem-padded($top: 25px, $right: 30px, $bottom: 25px, $left: 30px);

        @media (min-width: 768px) and (max-width: 1024px){
            @include mut.rem-padded($top: 20px, $right: 40px, $bottom: 15px, $left: 20px);
            height: 141px;
        }

        @media (min-width: 360px) and (max-width: 767px) {
            @include mut.rem-padded($top: 15px, $right: 15px, $bottom: 15px, $left: 15px);
            height: 300px;
        }
    }

    .newsTitle {
        @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 36px);
        color: #1D1F23;
        line-height: f.pxToRem(48px);
        display: -webkit-box;
        -webkit-box-orient: vertical;
        -webkit-line-clamp: 2;
        overflow: hidden;

        @media (min-width: 768px) and (max-width: 1024px) {
            @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
            font-style: bold;
            line-height: f.pxToRem(26.4px);
        }

        @media (min-width: 360px) and (max-width: 767px) {
            @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
            font-style: bold;
            line-height: f.pxToRem(26.4px);
            -webkit-line-clamp: 1;
        }
    }

    .newsText {
        position: relative;
        display: contents;

        &::-webkit-scrollbar {
            display: none;
        }

        .moreText {
            display: inline-block;
            margin-left: 4px;
            @include mut.with-font(ft.$roboto-font, $font-weight: bolder, $font-size: 15px);
            color: c.$dark-red-color;
            text-decoration: none;

            &:hover {
                text-decoration: underline;
            }
        }

        @media (min-width: 768px) and (max-width: 1024px){
            width: 93vw;
        }
    }
    .text{
        display: -webkit-box;
        -webkit-box-orient: vertical;
        -webkit-line-clamp: 2;
        overflow: hidden;
        @include mut.rem-margined(5px, 0px, 0px, 0px);
        @include mut.rem-padded(0px, 5px, 0px, 0px);
        color: c.$lighter-black-color;
        word-break: break-all;
        @include mut.with-font(ft.$roboto-light, $font-weight: 300, $font-size: 15px);
        line-height: 18px;
        @media (min-width: 768px) and (max-width: 1024px) {
            -webkit-line-clamp: 2;
            width: 93vw;
        }

        @media (max-width: 767px) {
            -webkit-line-clamp: 11;
        }
    }
}

